  Remove RCLocalizationHelper plugin (#2029457)
  Clarify Supercopier caused hang in release notes (#2030040)
  Improve tree mode in folder compare (#2018836)
  Unlimited undo (#2033754)
  BugFix: Could change syntax highlight mode when highlighting was
    disabled from options (#2027325)
  BugFix: Editing line filters updated wrong filter (#2025130)

WinMerge 2.11.1.2 - 2008-07-24 (r5673)
  Refresh compare after changing filter (#2017426)
  Add dialog listing available plugins (#2021722)
  Hierarchical directory comparison result view (#2018836)
  Add "Open Conflict" for file/folder compare menus (#2025472)
  Enable hierarchial folder compare view by default (#2025478)
  Confirmation dialog for move operations (#2026508)
  Manual: New build system (#2015434)
  Manual: Improve Opening Files and Folders (#2017901)
  Manual: Improve folder compare documentation (#2024587)
  BugFix: Failed to compare UTF-8 files plugins disabled (#2018287)
  Bugfix: Don't warn about closing multiple windows when only one
   window is open (#2010463)
  BugFix: Moving was allowed for protected items (#2023734)
  BugFix: Could change EOL style for protected file (#2025781)

WinMerge 2.11.1.1 - 2008-07-11 (r5609)
  Manual: Introduction update (#2011365)
  Manual: Reorganize structure (#2011924)
  Add ShellExtension menu for drive letters (root folders) (#2011602)
  Remove buildall.bat (#2013576)
  New option to enable plugins (disabled by default) (#2013845)
  Plugins: Show processing instructions in XML plugin (#1979321)
  BugFix: Use system codepage for paths (#1979429, #2008581)
  BugFix: ANSI build crash in folder compare (#2010053)
  BugFix: Add insert/overtype mode indicator to statusbar (#2015174)
  BugFix: Detected UTF-8 encoding shown as 65001 (#2012377)

WinMerge 2.10.x (R2_10) branch created (r5561)

WinMerge 2.9.1.5 - 2008-07-04 (r5560)
  Manual: Copy editing (#2000322, #2005418)
  Manual: Clarify 64-bit support (#2002431)
  Reduce executable sizes (#2003203)