@@ -13,6 +13,7 @@ WinMerge 2.11.1.3
   BugFix: Could change syntax highlight mode when highlighting was
     disabled from options (#2027325)
   BugFix: Editing line filters updated wrong filter (#2025130)
+  BugFix: Boldfacing did work only for Courier font (#2000996)
 
 WinMerge 2.11.1.2 - 2008-07-24 (r5673)
   Refresh compare after changing filter (#2017426)
